--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,17 +1,136 @@
-/* Error: Expected string.
- *   ,
- * 1 | @import ;
- *   |         ^
- *   '
- *   src\scss\styles.scss 1:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Expected string.\a   \2577 \a 1 \2502  @import ;\a   \2502          ^\a   \2575 \a   src\\scss\\styles.scss 1:9  root stylesheet";
+@font-face {
+  font-family: "Source-Sans-3";
+  font-style: normal;
+  font-weight: 300;
+  src: url(../fonts/Source-Sans-3/Source-Sans-3-Light.ttf) format("truetype");
 }
+@font-face {
+  font-family: "Source-Sans-3";
+  font-style: italic;
+  font-weight: 300;
+  src: url(../fonts/Source-Sans-3/Source-Sans-3-LightItalic.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Source-Sans-3";
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/Source-Sans-3/Source-Sans-3-Regular.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Source-Sans-3";
+  font-style: italic;
+  font-weight: 400;
+  src: url(../fonts/Source-Sans-3/Source-Sans-3-Italic.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Source-Sans-3";
+  font-style: normal;
+  font-weight: 500;
+  src: url(../fonts/Source-Sans-3/Source-Sans-3-Medium.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Source-Sans-3";
+  font-style: italic;
+  font-weight: 500;
+  src: url(../fonts/Source-Sans-3/Source-Sans-3-MediumItalic.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Source-Sans-3";
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/Source-Sans-3/Source-Sans-3-Bold.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Source-Sans-3";
+  font-style: italic;
+  font-weight: 700;
+  src: url(../fonts/Source-Sans-3/Source-Sans-3-BoldItalic.ttf) format("truetype");
+}
+:root {
+  --hue: 227;
+  --sat: 47%;
+  --primary-color: hsl(var(--hue), var(--sat), 52%);
+  --primary-color-light: hsl(var(--hue), var(--sat), 85%);
+  --primary-color-lighten: hsl(var(--hue), var(--sat), 80%);
+  --secondary-color: hsl(var(--hue), var(--sat), 53%);
+  --title-color: hsl(var(--hue), 4%, 15%);
+  --text-color: hsl(var(--hue), 4%, 35%);
+  --text-color-light: hsl(var(--hue), 4%, 65%);
+  --body-color: hsl(var(--hue), 0%, 100%);
+  --container-color: #fff;
+  --ff-primary: "Source-Sans-3", sans-serif;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: var(--ff-primary);
+  background: var(--body-color);
+  line-height: 2;
+  font-size: 1rem;
+  text-align: left;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  display: block;
+}
+
+h1, h2, h3, h4 {
+  color: var(--title-color);
+  line-height: 2;
+}
+
+p {
+  color: var(--text-color);
+  line-height: 2;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+h4 {
+  font-size: 0.875rem;
+}
+
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+}
+
+/*# sourceMappingURL=styles.css.map */
