creation and styling of the navbar - part 3

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -126,6 +126,27 @@ h4 {
   gap: 1.5rem;
 }
 
+.button {
+  display: inline-block;
+  background: var(--primary-color);
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  border-radius: 3rem;
+  -webkit-border-radius: 3rem;
+  -moz-border-radius: 3rem;
+  -ms-border-radius: 3rem;
+  -o-border-radius: 3rem;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+.button:hover {
+  background: var(--container-color);
+  outline: 1px solid var(--primary-color);
+  color: var(--primary-color);
+}
 .button__header {
   display: none;
 }
@@ -191,6 +212,15 @@ h4 {
   top: 4rem;
 }
 
+@media screen and (min-width: 767px) {
+  .nav__list {
+    flex-direction: row;
+    column-gap: 2.5rem;
+  }
+  .nav__toggle {
+    display: none;
+  }
+}
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 3rem;
@@ -203,6 +233,15 @@ h4 {
   }
   h4 {
     font-size: 1rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .container {
+    width: 95vw;
+  }
+  .button__header {
+    display: block;
+    padding: 0.5rem 1.5rem;
   }
 }
 
