--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,7 +1,25 @@
 .button {
+    display: inline-block;
+    background: var(--primary-color);
+    color: #fff;
+    padding: 0.75rem 1.5rem;
+    border-radius: 3rem;
+    -webkit-border-radius: 3rem;
+    -moz-border-radius: 3rem;
+    -ms-border-radius: 3rem;
+    -o-border-radius: 3rem;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
 
+    &:hover {
+        background: var(--container-color);
+        outline: 1px solid var(--primary-color);
+        color: var(--primary-color);
+    }
 
-    
     &__header{
         display: none;
     }
