--- a/src/scss/_mediaqueries.scss
+++ b/src/scss/_mediaqueries.scss
@@ -1,3 +1,22 @@
+@media screen and (min-width: 576px) {
+    .home__container {
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+
+    .home {
+        padding-top: 6rem;
+    }
+
+    .home__img {
+        order: 1;
+    }
+
+    .svg__img {
+        width: 100%;
+    }
+}
+
 @media screen and (min-width: 767px) {
     .nav {
         &__list {
@@ -29,6 +48,10 @@
 @media screen and (min-width: 992px) {
     .container {
         width: 95vw;
+    }
+
+    .svg__img {
+        width: 500px;
     }
 
     .button__header {
