--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -129,6 +129,14 @@ h4 {
 .section {
   padding: 4rem 0 1rem 0;
 }
+.section__title {
+  font-size: 1.25rem;
+  color: var(--title-color);
+  margin-bottom: 1rem;
+}
+.section__title span {
+  color: var(--primary-color);
+}
 
 .svg__img {
   width: 400px;
@@ -239,8 +247,12 @@ h4 {
   margin-bottom: 2rem;
 }
 
+.about__container {
+  gap: 2rem;
+}
+
 @media screen and (min-width: 576px) {
-  .home__container {
+  .home__container, .about__container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
   }
@@ -249,6 +261,12 @@ h4 {
   }
   .home__img {
     order: 1;
+  }
+  .about__img {
+    order: -1;
+  }
+  .about__info {
+    text-align: left;
   }
   .svg__img {
     width: 100%;
