creation and styling of the navbar - part 4

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -174,7 +174,7 @@ h4 {
   background: var(--body-color);
   top: 0;
   left: 0;
-  padding: 0.75rem 0;
+  padding: 0.5rem 0;
 }
 
 .nav {
@@ -225,8 +225,30 @@ h4 {
   color: var(--title-color);
 }
 
+.active-link {
+  position: relative;
+}
+.active-link::before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 5px;
+  bottom: -0.75rem;
+  left: calc(50% - 15px);
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  background: var(--title-color);
+}
+
 .show-menu {
   top: 4rem;
+}
+
+.scroll-header {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
 
 .home {
