--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -4,7 +4,7 @@
     background: var(--body-color);
     top: 0;
     left: 0;
-    padding: 0.75rem 0;
+    padding: 0.5rem 0;
 }
 
 .nav {
@@ -60,6 +60,29 @@
     }
 }
 
+.active-link {
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        width: 30px;
+        height: 5px;
+        bottom: -0.75rem;
+        left: calc(50% - 15px);
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        background: var(--title-color);
+    }
+}
+
 .show-menu {
     top: 4rem;
+}
+
+.scroll-header {
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
