creation and styling of the support section

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -273,8 +273,12 @@ h4 {
   gap: 2rem;
 }
 
+.support__container {
+  gap: 2rem;
+}
+
 @media screen and (min-width: 576px) {
-  .home__container, .about__container {
+  .home__container, .about__container, .support__container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
   }
@@ -287,7 +291,13 @@ h4 {
   .about__img {
     order: -1;
   }
+  .support__img {
+    order: 1;
+  }
   .about__info {
+    text-align: left;
+  }
+  .support__info {
     text-align: left;
   }
   .svg__img {
