creation and styling of the services section

--- a/src/scss/_mediaqueries.scss
+++ b/src/scss/_mediaqueries.scss
@@ -1,5 +1,5 @@
 @media screen and (min-width: 576px) {
-    .home__container, .about__container, .support__container {
+    .home__container, .about__container, .support__container, .services__container {
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
     }
@@ -73,5 +73,13 @@
     .button__header {
         display: block;
         padding: 0.3rem 1.5rem ;
+    }
+
+    .home__container, .about__container, .support__container {
+        column-gap: 6rem;
+    }
+
+    .services__container {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
