--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -17,6 +17,11 @@
         span {
             color: var(--primary-color);
         }
+
+        &-center {
+            @extend .section__title;
+            text-align: center;
+        }
     }
 }
 
