creation and styling of the applications section

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -34,4 +34,10 @@
             color: var(--container-color);
         }
     }
+
+    &-flex {
+        display: flex;
+        align-items: center;
+        column-gap: 0.5rem;
+    }
 }
