creation and styling of the contact section

--- a/src/scss/_mediaqueries.scss
+++ b/src/scss/_mediaqueries.scss
@@ -1,5 +1,10 @@
 @media screen and (min-width: 576px) {
-    .home__container, .about__container, .support__container, .services__container, .app__container {
+    .home__container, 
+    .about__container, 
+    .support__container, 
+    .services__container, 
+    .app__container,
+    .contact__container {
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
     }
@@ -8,15 +13,19 @@
         padding-top: 6rem;
     }
 
-    .home__img, .support__img {
+    .home__img, 
+    .support__img {
         order: 1;
     }
 
-    .about__img, .app__img {
+    .about__img, 
+    .app__img {
         order: -1;
     }
 
-    .about__info, .support__info, .app__info {
+    .about__info, 
+    .support__info, 
+    .app__info {
         text-align: left;
     }
 
@@ -71,11 +80,19 @@
         padding: 0.3rem 1.5rem ;
     }
 
-    .home__container, .about__container, .support__container, .app__container {
+    .home__container, 
+    .about__container, 
+    .support__container, 
+    .app__container,
+    .contact__container {
         column-gap: 6rem;
     }
 
     .services__container {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+    .contact__container {
+        grid-template-columns: 3fr 1.5fr 1.25fr;
     }
 }
