--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -184,6 +184,9 @@ h4 {
   align-items: center;
   column-gap: 0.5rem;
 }
+.button-contact {
+  margin-top: 1rem;
+}
 
 .header {
   position: fixed;
@@ -332,21 +335,51 @@ h4 {
   gap: 0.5rem;
 }
 
+.contact__container {
+  padding-bottom: 3rem;
+}
+.contact__description {
+  text-align: left;
+}
+.contact__info {
+  margin-top: 1rem;
+  display: grid;
+  row-gap: 0.75rem;
+}
+.contact__address {
+  font-size: 1rem;
+  font-weight: bold;
+  color: var(--title-color);
+}
+.contact__information {
+  font-weight: 400;
+  color: var(--text-color);
+}
+
 @media screen and (min-width: 576px) {
-  .home__container, .about__container, .support__container, .services__container, .app__container {
+  .home__container,
+  .about__container,
+  .support__container,
+  .services__container,
+  .app__container,
+  .contact__container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
   }
   .home {
     padding-top: 6rem;
   }
-  .home__img, .support__img {
+  .home__img,
+  .support__img {
     order: 1;
   }
-  .about__img, .app__img {
+  .about__img,
+  .app__img {
     order: -1;
   }
-  .about__info, .support__info, .app__info {
+  .about__info,
+  .support__info,
+  .app__info {
     text-align: left;
   }
   .svg__img {
@@ -390,11 +423,18 @@ h4 {
     display: block;
     padding: 0.3rem 1.5rem;
   }
-  .home__container, .about__container, .support__container, .app__container {
+  .home__container,
+  .about__container,
+  .support__container,
+  .app__container,
+  .contact__container {
     column-gap: 6rem;
   }
   .services__container {
     grid-template-columns: repeat(3, 1fr);
+  }
+  .contact__container {
+    grid-template-columns: 3fr 1.5fr 1.25fr;
   }
 }
 
