creation and styling of the footer section

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -3,6 +3,10 @@
         padding-bottom: 3rem;
     }
 
+    &__title {
+        color: var(--primary-color);
+    }
+
     &__description {
         text-align: left;
     }
