--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -338,6 +338,9 @@ h4 {
 .contact__container {
   padding-bottom: 3rem;
 }
+.contact__title {
+  color: var(--primary-color);
+}
 .contact__description {
   text-align: left;
 }
@@ -356,6 +359,68 @@ h4 {
   color: var(--text-color);
 }
 
+.wave {
+  display: none;
+  padding: 0;
+  margin: 7rem 0 0 0;
+}
+.wave__svg {
+  width: 100%;
+  padding: 0 !important;
+  margin: 0 !important;
+  position: relative;
+  z-index: -2;
+  transform: translateY(12px);
+  -webkit-transform: translateY(12px);
+  -moz-transform: translateY(12px);
+  -ms-transform: translateY(12px);
+  -o-transform: translateY(12px);
+}
+.wave path {
+  fill: var(--primary-color-lighten);
+  fill-opacity: "1";
+}
+
+.footer {
+  background: var(--primary-color-lighten);
+  padding: 3rem 0 1rem 0;
+}
+.footer__container {
+  row-gap: 2rem;
+}
+.footer__logo, .footer__title {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+.footer__logo {
+  margin-bottom: 0.75rem;
+  color: var(--title-color);
+}
+.footer__description, .footer__link {
+  font-size: 0.9rem;
+}
+.footer__link {
+  color: var(--title-color);
+}
+.footer__links {
+  display: grid;
+  row-gap: 0.25rem;
+}
+.footer__social {
+  display: flex;
+  column-gap: 1.5rem;
+}
+.footer__social-link {
+  font-size: 1.5rem;
+  color: var(--title-color);
+}
+.footer__copy {
+  margin-top: 2rem;
+  text-align: center;
+  font-size: 0.9rem;
+  color: var(--title-color);
+}
+
 @media screen and (min-width: 576px) {
   .home__container,
   .about__container,
@@ -365,6 +430,9 @@ h4 {
   .contact__container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
+  }
+  .footer__container {
+    grid-template-columns: repeat(2, 1fr);
   }
   .home {
     padding-top: 6rem;
@@ -435,6 +503,20 @@ h4 {
   }
   .contact__container {
     grid-template-columns: 3fr 1.5fr 1.25fr;
+  }
+  .wave {
+    display: block;
+  }
+  .footer__container {
+    grid-template-columns: repeat(5, 1fr);
+  }
+  .footer__social-link {
+    font-size: 1.7rem;
+  }
+}
+@media screen and (min-width: 1577px) {
+  .wave {
+    margin: 0;
   }
 }
 
