--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,6 @@
+@import "../css/bootstrap-icons.css";
 @import "variables";
+@import "theme";
 @import "base";
 @import "layout";
 @import "button";
