--- a/src/scss/_mediaqueries.scss
+++ b/src/scss/_mediaqueries.scss
@@ -53,6 +53,10 @@
             display: none;
         }
     }
+
+    .change-theme {
+        position: unset;
+    }
 }
 
 @media screen and (min-width: 800px) {
