ask to fork this repository for free in the future

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,3 +1,5 @@
+// Fork this repository for free:  https://github.com/reza-azimifar
+
 .footer {
     background: var(--primary-color-lighten);
     padding: 3rem 0 1rem 0;
