--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -1,3 +1,5 @@
+// Fork this repository for free:  https://github.com/reza-azimifar
+
 body.dark-theme {
     --primary-color-light: hsl(var(--hue), var(--sat), 75%);
     --title-color: hsl(var(--hue), 4%, 95%);
