--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,5 @@
+// Fork this repository for free:  https://github.com/reza-azimifar
+
 @import "../css/bootstrap-icons.css";
 @import "variables";
 @import "theme";
