--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,3 +1,5 @@
+// Fork this repository for free:  https://github.com/reza-azimifar
+
 .button {
     display: inline-block;
     background: var(--primary-color);
