--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,3 +1,5 @@
+// Fork this repository for free:  https://github.com/reza-azimifar
+
 .contact {
     &__container {
         padding-bottom: 3rem;
