--- a/src/scss/_mediaqueries.scss
+++ b/src/scss/_mediaqueries.scss
@@ -1,3 +1,5 @@
+// Fork this repository for free:  https://github.com/reza-azimifar
+
 @media screen and (min-width: 576px) {
     .home__container, 
     .about__container, 
