--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,5 @@
+// Fork this repository for free:  https://github.com/reza-azimifar
+
 @font-face {
     font-family: "Source-Sans-3";
     font-style: normal;
