--- a/src/css/bootstrap-icons.css
+++ b/src/css/bootstrap-icons.css
@@ -1,8 +1,8 @@
 @font-face {
     font-display: block;
     font-family: "bootstrap-icons";
-    src: url("../fonts/bootstrap/bootstrap-icons.woff") format("woff2"),
-    url("../fonts/bootstrap/bootstrap-icons.woff2") format("woff");
+    src: url("../fonts/bootstrap/bootstrap-icons.woff") format("woff"),
+    url("../fonts/bootstrap/bootstrap-icons.woff2") format("woff2");
   }
   
   .bi::before,
